Closed Bug 1844497 Opened 2 years ago Closed 10 months ago

[X11/KDE] Hit-testing fails at the very top after enabling system titlebar until you restart Firefox/Thunderbird

Categories

(Core :: Widget: Gtk, defect, P2)

x86_64
Linux
defect

Tracking

()

RESOLVED FIXED
127 Branch
Tracking Status
firefox127 --- fixed

People

(Reporter: dyle71, Assigned: emilio)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36

Steps to reproduce:

Enable window titlebar in system settings (I dislike modern approach to cluttering of the title bar).

Actual results:

The normal toolbar buttons ("Get Message", "Write", ...) do not work any longer. On a click the whole titlebar darkens but nothing happens.

Disabling the Window Titelbar again, fixes the issue (but not to my liking).

Expected results:

Hiding or displaying the Window Titlebar should not have an effect on the toolbar buttons.

OS: Unspecified → Linux
Hardware: Unspecified → x86_64
Summary: In TN 115 (supernova) when I enable window titlebar the toolbuttons get useless → In TB 115 (supernova) when I enable window titlebar the toolbuttons get useless

Your description doesn't quite make sense to me.

By "Enable window titlebar", do you mean you unchecked Hide system window titlebar Thunderbird settings? Or in an OS setting?
What linux distro and desktop are you using?
And please always state your full version number - the most recent is 115.0.1. The other possible choice is 115.0.

Flags: needinfo?(dyle71)
See Also: → 1843691
See Also: → 1845016

Yes, I mean I unchecked Hide system window titlebar in the Thunderbird settings.

Operating System: Arch Linux
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10
Kernel Version: 6.4.4-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 32 × AMD Ryzen 9 5950X 16-Core Processor
Memory: 125,7 GiB of RAM
Graphics Processor: AMD Radeon RX 6800 XT
Manufacturer: PCSpecialist
Product Name: Amd Am4 Gen3

Thunderbird Version 115.0.

Flags: needinfo?(dyle71)

I would like to add some note:

I experiences same issues on Plasma 5.27.6 wayland,
all toolbar button disfunctional, after uncheck hide system window titlebar.

but the Issues resolved by restarting thunderbird.

You're right. The problem fixes after restarting TB.

Duplicate of this bug: 1843691

Martin, is there anything we can do here? Or it is something that needs to be tackled on the m-c side?

TLDR: Toolbar buttons don't work after enabling system window titlebar on KDE Plasma with Wayland.
Everything works after a restart.

Flags: needinfo?(martin)

Note: 1843691 reported misbehaviour with KDE Plasma X11, not Wayland.

(In reply to Alessandro Castellani [:aleca] from comment #6)

Martin, is there anything we can do here? Or it is something that needs to be tackled on the m-c side?

It's possible we need to change something, but I wouldn't know what. It's possible we missed following along some change for CSD on Linux. I think it was suggested we contact the developer that's been working on most of the Linux platform integration for m-c?

(In reply to Gunter Ohrner from comment #7)

Note: 1843691 reported misbehaviour with KDE Plasma X11, not Wayland.

I'm pretty sure we usually run with X(wayland) in our distributions, but about:support would give the final answer on that. My beta tells me "Window Protocol xwayland" in about:support (Help → Troubleshooting Information).

Which is interesting, since in theory that about:buildconfig says it had --enable-default-toolkit=cairo-gtk3-x11-wayland as config, which should be able to use wayland directly? https://searchfox.org/mozilla-central/rev/d6960b4e32d09bff32865694e32384eb9bca4af5/toolkit/moz.configure#433-442
Maybe the wayland backend is only used if absolutely necessary and X11 is still preferred.

Flags: needinfo?(martin)

FYI: I've updated to 115.0.1 and doing a Help -> Troubleshooting Information yields:

grep -i 'Window Protocol' Thunderbird\ 115.0.1\ -\ Troubleshooting\ Information 
      Window Protocol: x11

The effect is still happening. Though it is a minor quirk since enabling the Window Title Bar, pkill thunderbird and restarting TB works fine. So there's a workaround.

The effect is this: when clicking on a toolbar button after activating the Window Manager Titlebar the whole TB loses focus (and another window - yet not visible - is activated by the Window Manager) and no Toolbar button action is executed. I have to click into the TB window again to have TB regain focus.

Also interesting: I have the menu (File, Edit, View, ...) line. While this quirk is active, I cannot click on "File" to open up the File menu. It behaves like the Toolbar buttons. But I can click on "Edit" right next to it and it opens up the menu.

Exiting TB and restarting: all is ok.

Status: UNCONFIRMED → NEW
Ever confirmed: true
See Also: 1843691
Component: Toolbars and Tabs → Mail Window Front End
See Also: → 1824124

Thoughts on next step?

Severity: -- → S3
Flags: needinfo?(alessandro)
Priority: -- → P2

Gentle ping on Emilio if he has any suggestion on this.
Not sure if we did something wrong with our unified toolbar based on comment 8.

Flags: needinfo?(alessandro) → needinfo?(emilio)

I've seen this too in the past. This is an issue in Firefox too, and only on KWin + X11 IIRC.

Might be a KWin bug, but given the trivial fix is restarting or opening a new window after changing the setting, I haven't dug into whose bug it is yet.

If you or someone else has the cycles, running mozregression on this might be the easiest way to see if it's a Firefox regression we can easily address.

Component: Mail Window Front End → Widget: Gtk
Flags: needinfo?(emilio)
Product: Thunderbird → Core
Summary: In TB 115 (supernova) when I enable window titlebar the toolbuttons get useless → [X11/KDE] Hit-testing fails at the very top after enabling system titlebar until you restart Firefox/Thunderbird
Version: Thunderbird 115 → unspecified
Blocks: gtktitlebar

This problem reproduces on KWin + Wayland (see https://bugs.kde.org/show_bug.cgi?id=478556#c76)

Ok so I can repro in Wayland too. Mozregression says this failed to work as far back as this feature has existed. So either this is a bug since ~forever, or a KWin regression.

This is enough to workaround this KWin or GTK issue...

Assignee: nobody → emilio
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b6fea1030233 Recompute input region when switching titlebar mode. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 10 months ago
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: