Bug 1844497 - Recompute input region when switching titlebar mode. r=stransky

This is enough to workaround this KWin or GTK issue...

Differential Revision: https://phabricator.services.mozilla.com/D209223